# sparkless

./: .gitignore  .readthedocs.yml  CHANGELOG.md  Cargo.toml  Makefile  PYSPARK_FUNCTION_MATRIX.md  README.md  SPARKLESS_BACKLOG.md  TODO.md  debug_window_arithmetic.py  failure_by_file.txt  failure_counts.txt  install.sh  mypy.ini  pyproject.toml  robin_mode_test_results.txt  robin_mode_test_run_n10.txt  robin_mode_timeout_scan.txt  test_failure_analysis.txt  test_failure_summary.md  test_failures_detail.txt  test_failures_full.txt  test_results.txt  test_results_full.txt  test_results_robin_mode.txt  test_run.txt  test_run_20260213_194312.txt  test_run_20260213_194551.txt  test_run_20260213_200826.txt  test_run_latest.txt  test_run_summary.txt
docs/: SPARKLESS_BACKLOG_ANALYSIS.md  SPARKLESS_FAILURES_BACKLOG.md  api_reference.md  api_reference.rst  backend_architecture.md  backend_architecture.rst  backend_selection.md  backend_selection.rst  conf.py  function_api_audit.md  function_api_audit.rst  getting_started.md  getting_started.rst  index.rst  installation.rst  known_issues.md  known_issues.rst  lazy_migration_plan.md  migration_from_pyspark.md  migration_from_pyspark.rst  migration_from_v2_to_v3.md  migration_from_v2_to_v3.rst  migration_v3_to_v4.md  mock_spark_features.md  mock_spark_features.rst  polars_vs_sparkless_runtime_dependency.md  release_notes_v4.md  release_process.md  requirements.txt  robin_compatibility_recommendations.md  robin_expression_plan_format_mismatch.md  robin_github_issue_between_power_cast_plan.md  robin_github_issue_case_sensitivity.md  (+52 more)
(+716 files in other folders)
