[package]
name = "sparkless-robin"
version = "0.1.0"
edition = "2021"
description = "Sparkless Robin PyO3 extension wrapping the robin-sparkless Rust crate."
license = "MIT"

[lib]
name = "sparkless_robin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38", "gil-refs"] }
polars = { version = "0.45", features = ["lazy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
robin-sparkless = { version = "0.11.10", features = ["sql", "delta"] }
spark-ddl-parser = "0.1"
once_cell = "1.19"

